Finalização do projeto de treinamento CORE

--- a/src/StoreOfBuild.Web/Views/Home/Index.cshtml
+++ b/src/StoreOfBuild.Web/Views/Home/Index.cshtml
@@ -3,5 +3,7 @@
 }
 
 <div>
-    <span>Welcome to Store of Build</span>
+    <h1>Welcome to Store of Build</h1>
+    <br>
+    <span>This project was developed to trainning of .NET CORE MVC With DDD Infrastruture</span>
 </div>
