--- a/src/StoreOfBuild.Web/Views/Shared/_Layout.cshtml
+++ b/src/StoreOfBuild.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Store Of Build</p>
+            <p>Development by Anderson Vinicius Bellini</p>
+            <p>&copy; 2018 - Store Of Build</p>
         </footer>
     </div>
 
