--- a/src/StoreOfBuild.Web/Views/Account/Login.cshtml
+++ b/src/StoreOfBuild.Web/Views/Account/Login.cshtml
@@ -9,20 +9,19 @@
     <div class="col-md-8">
         <section>
             <form asp-controller="Account" asp-action="Login" method="post" class="form-horizontal">
-                <h1>Make login.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Email" class="col-md-2 control-label"></label>
                     <div class="col-md-10">
-                        <input asp-for="Email" class="form-control" />
+                        <input asp-for="Email" class="form-control" maxlength="50" placeholder="xxxx@xxx.com" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password" class="col-md-2 control-label"></label>
                     <div class="col-md-10">
-                        <input asp-for="Password" class="form-control" />
+                        <input asp-for="Password" class="form-control" type="password" maxlength="10" placeholder="**********"/>
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
@@ -31,10 +30,10 @@
                         <button type="submit" class="btn btn-default">Log in</button>
                     </div>
                 </div>
-                <p>
+                <p>[NOT IMPLEMENTED] 
                     <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
                 </p>
-                <p>
+                <p>[NOT IMPLEMENTED] 
                     <a asp-action="ForgotPassword">Forgot your password?</a>
                 </p>
             </form>
