--- a/src/StoreOfBuild.Web/Views/Category/Index.cshtml
+++ b/src/StoreOfBuild.Web/Views/Category/Index.cshtml
@@ -9,9 +9,18 @@
         <a href="/Category/CreateOrEdit" class="btn btn-primary">New</a>
     </div>
 </div>
+<br>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-hover">
+            <thead>
+                <tr>
+                    <td>
+                        <p class="name">Name</p>
+                    </td>
+                    <td></td>
+                    </tr>
+                </thead>
             <tbody>
                 @foreach(var viewModel in @Model)
                 {
@@ -20,7 +29,7 @@
                             <a class="name">@viewModel.Name</a>
                         </td>
                         <td>
-                            <a href="/Category/CreateOrEdit/@viewModel.Id" class="btn">Edit</a>
+                            <a href="/Category/CreateOrEdit/@viewModel.Id" class="btn btn-success">Edit</a>
                         </td>
                     </tr>
                 }
