--- a/src/StoreOfBuild.Web/Views/Account/Login.cshtml
+++ b/src/StoreOfBuild.Web/Views/Account/Login.cshtml
@@ -1,10 +1,10 @@
 @model StoreOfBuild.Web.ViewsModels.LoginViewModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Login";
 }
 
-<h2>@ViewData["Title"].</h2>
+<h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-8">
         <section>
